--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "state-space-fc"
 version = "0.1.0"
-description = "Add your description here"
+description = "Compete with RL in football fantasy cups."
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = []
